# django-querybuilder-rules

./: .travis.yml  README.md  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile
docs/source/: conf.py  index.rst
querybuilder_rules/: __init__.py  apps.py  compat.py  conditions.py  json_schema.py  maps.py  utils.py  values.py
querybuilder_rules/rules/: __init__.py  base.py  generic.py  param.py  price.py  validation.py
querybuilder_rules/variables/: base.py  simple.py
requirements/: docs.txt  package.txt
tests/: apps.py  test_calculate_price.py  test_calculate_price_variant.py  test_condition.py  test_json_schema.py  test_operators.py  test_option_value.py  test_param_rules.py  test_parse_price.py  test_validate_value.py  test_validate_variant.py
tests/settings/: dev.py
tests/test_rules/: test_generic.py
tests/variables/: test_simple_variable.py  test_variable.py
