[metadata]
description-file = README.md

[bumpversion]
current_version = '0.0.1'
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:querybuilder_rules/__init__.py]

[wheel]
universal = 1

[flake8]
ignore = D203
exclude =
    querybuilder_rules/migrations,
    .git,
    .tox,
    docs/conf.py,
    build,
    dist
max-line-length = 99
